--- a/package.json
+++ b/package.json
@@ -6,18 +6,10 @@
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "unpkg": "dist/plugin.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
-    }
-  },
   "files": [
     "android/src/main/",
     "android/build.gradle",
-    "dist/",
-    "Package.swift",
-    "SystemBeep.podspec"
+    "dist/"
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
