--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "system-beep",
   "version": "0.0.1",
   "description": "Beep",
-  "main": "dist/plugin.cjs.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
-  "unpkg": "dist/plugin.js",
+  "main": "./dist/plugin.cjs.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
+  "unpkg": "./dist/plugin.js",
   "files": [
     "android/src/main/",
     "android/build.gradle",
     "dist/"
   ],
+  "exports": {
+      ".": {
+        "types": "./dist/index.d.ts",
+        "import": "./dist/plugin.mjs",
+        "require": "./dist/plugin.cjs"
+      }
+    },
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
     "verify:ios": "xcodebuild -scheme SystemBeep -destination generic/platform=iOS",
