compile only on capacitor core

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,7 +51,7 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
-    implementation 'com.capacitorjs:core:7.+'
+    compileOnly 'com.capacitorjs:core:7.+'
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
